# SimAPI-elite

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  install.ps1  launch.py  pyproject.toml  railway.json  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy-web.yml  publish-npm.yml
Formula/: simapi.rb
api/: config.py  errors.py  observability.py  security.py  server.py
benchmark/: institutional_benchmark.py  realistic_benchmark.py  results.json  run_benchmark.py
core/: adversarial.py  ai_assessment.py  ai_orchestrator.py  ai_pipeline.py  ai_validator.py  apie.py  causal_diagnosis.py  compliance.py  dataset_profile.py  followup_probes.py  ingestion.py  mesh_validator.py  physics_manifold.py  physics_validator.py  repair.py  run_history.py  universal_validator.py
dashboard/: index.html
docs/: SimAPI.postman_collection.json  examples.md  openapi.json
docs-pages/: index.html
docs-site/: README.md  authentication.mdx  changelog.mdx  docs.json  enterprise.mdx  faq.mdx  installation.mdx  introduction.mdx  quickstart.mdx  rate-limits.mdx  roadmap.mdx  security.mdx
docs-site/api-reference/: health.mdx  introduction.mdx  jobs.mdx  upload.mdx  validate.mdx
docs-site/cicd/: docker.mdx  github-actions.mdx
docs-site/concepts/: error-codes.mdx  simulation-formats.mdx  validation-rules.mdx
docs-site/sdks/: cli.mdx  node.mdx
integrations/: INTEGRATION_GUIDE.md
integrations/docker/: Dockerfile
integrations/github-actions/: action.yml  example-workflow.yml
integrations/pre-commit/: pre-commit-hook.sh  pre-commit-hooks.yaml
python-pkg/: README.md  pyproject.toml
python-pkg/simapi/: __init__.py  cli.py
sdk/: simapi.py
sdk-node/: README.md  package.json
sdk-node/src/: index.ts
tests/: conftest.py  test_api.py  test_ingestion_formats.py  test_mesh.py  test_repair.py  test_security.py
web/: README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
web/components/: analytics-panel.tsx  auth-screen.tsx  benchmark-stats.tsx  code-section.tsx  cta.tsx  dashboard-app.tsx  faq.tsx  features.tsx  footer.tsx  hero-background.tsx  hero.tsx  history-panel.tsx  logo.tsx  logs-panel.tsx  nav.tsx  preflight-panel.tsx  request-inspector-panel.tsx  validation-dashboard.tsx
web/lib/: ai-review.ts  api.ts  auth.tsx  crypto.ts  dashboard-store.ts  demo-data.ts  institutional-benchmark-results.json  mesh-parse.ts  mesh-validate.ts  realistic-benchmark-results.json  rich-validate.ts  run-history.ts  site.ts  validation-engine.ts
(+35 files in other folders)
