[project]
name = "simapi"
version = "3.1.0"
description = "The CI/CD layer for engineering simulations — automated physics + AI validation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SimAPI" }]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/TaxCollector23/SimAPI-YC-"

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = [".venv", "dashboard"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E741/E501: the physics engine uses terse single-letter locals by design.
# B008: FastAPI's dependency-injection idiom (Depends()/Form()/File() in defaults).
ignore = ["E741", "E501", "B008"]

[tool.ruff.lint.per-file-ignores]
# The legacy validation engine (`core/`) is written in a deliberately compact,
# vectorized notation with many one-line statements. Reformatting it wholesale is
# out of scope (it is stable, tested numerical code), so we exempt those files
# from the line-density and idiom rules while keeping correctness rules (F*).
"core/physics_validator.py" = ["E701", "E702", "E722", "UP035", "UP006", "UP045", "B905"]
"core/ingestion.py" = ["E701", "E702", "F601", "UP035", "UP006"]
"core/ai_validator.py" = ["E701", "E702", "E722"]
"core/apie.py" = ["E701", "E702", "E722"]
"core/causal_diagnosis.py" = ["E701", "E702", "UP035", "UP006"]
"core/run_history.py" = ["E701", "E702", "UP035", "UP006"]
"core/universal_validator.py" = ["E701", "E702", "UP035", "UP006"]
"core/physics_manifold.py" = ["E701", "E702", "UP035", "UP006"]
"core/mesh_validator.py" = ["E701", "E702"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
